crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_apply_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Apply profile to device

Usage: wheelctl profile apply [OPTIONS] <DEVICE> <PROFILE>

Arguments:
  <DEVICE>   Device ID or name
  <PROFILE>  Profile path or ID

Options:
      --json                 Output in JSON format for machine parsing
      --skip-validation      Skip validation
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
