crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_create_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Create new profile

Usage: wheelctl profile create [OPTIONS] <PATH>

Arguments:
  <PATH>  Profile file path

Options:
      --from <FROM>          Base profile to copy from
      --json                 Output in JSON format for machine parsing
      --game <GAME>          Game scope
  -v, --verbose...           Verbose logging
      --car <CAR>            Car scope
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
