crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_edit_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Edit profile interactively

Usage: wheelctl profile edit [OPTIONS] <PROFILE>

Arguments:
  <PROFILE>  Profile path or ID

Options:
      --field <FIELD>        Field to edit (e.g., base.ffbGain)
      --json                 Output in JSON format for machine parsing
  -v, --verbose...           Verbose logging
      --value <VALUE>        New value
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
