crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_export_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Export profile

Usage: wheelctl profile export [OPTIONS] <PROFILE>

Arguments:
  <PROFILE>  Profile path or ID

Options:
      --json                 Output in JSON format for machine parsing
  -o, --output <OUTPUT>      Output file path
      --signed               Include signature
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
