crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__profile_import_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Import profile

Usage: wheelctl profile import [OPTIONS] <PATH>

Arguments:
  <PATH>  Profile file path

Options:
      --json                 Output in JSON format for machine parsing
  -t, --target <TARGET>      Target directory
  -v, --verbose...           Verbose logging
      --verify               Verify signature
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
