crates/cli/tests/snapshots/cli_comprehensive_e2e_tests__help_snapshots__safety_limit_help.snap
---
source: crates/cli/tests/cli_comprehensive_e2e_tests.rs
expression: stdout
---
Set torque limits

Usage: wheelctl safety limit [OPTIONS] <DEVICE> <TORQUE>

Arguments:
  <DEVICE>  Device ID or name
  <TORQUE>  Maximum torque in Nm

Options:
      --global               Apply to all profiles
      --json                 Output in JSON format for machine parsing
  -v, --verbose...           Verbose logging
      --no-mock              Fail if wheeld is unreachable instead of showing simulated data [env: WHEELCTL_NO_MOCK=1]
      --endpoint <ENDPOINT>  Service endpoint (for testing) [env: WHEELCTL_ENDPOINT=]
  -h, --help                 Print help
